--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,15 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <array name="Pizzarias_Delivery">
+        <item>@drawable/pizzaria1</item>
+        <item>@drawable/pizzaria2</item>
+        <item>@drawable/pizzaria3</item>
+        <item>@drawable/pizzaria4</item>
+    </array>
+    <string name="title_activity_toddes">ToddesActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_3">Tab 3</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
